--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  color: #282c34;
+  font-size: 18px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app {
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
 }
 
-.App-header {
+header {
+  height: 46px;
+  width: 100%;
+}
+
+nav {
+  line-height: 46px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.nav-title {
+  display: inline-block;
+  font-family: 'Inria Serif', serif;
+  font-size: 20px;
+}
+
+.menu-btn {
+  height: 46px;
+  width: 25px;
+  float: right;
+}
+
+.menu {
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 100vw;
+  height: 100vh;
+  background-color: gray;
+}
+
+.sim {
+  height: calc(0.65 * (100vh - 46px));
+  background-color: #f1f5fd;
+}
+
+.console {
+  box-sizing: border-box;
+
+  height: calc(0.35 * (100vh - 46px));
+  font-family: 'Inconsolata', monospace;
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: #f1f5fd;
+  padding: 15px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* @media only screen and (min-width: 767px) {
+  header {
+  background-color: black;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+} */
