--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -83,9 +83,10 @@ nav {
   transform: translate3d(-60vw,0,0);
 }
 
-.sim {
+.sim-wrapper {
   height: calc(0.65 * (100vh - 46px));
   background-color: #f1f5fd;
+  padding: 15px;
 }
 
 .console {
