--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,41 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 :root {
   --prompt-width: 50px;
 }
@@ -59,7 +21,7 @@ code {
 
 .app {
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
 }
 
@@ -91,7 +53,8 @@ nav {
   top: 0;
   left: 100vw;
   height: 100vh;
-  background-color: #f1f5fd;;
+  background-color: #f1f5fd;
+  visibility: hidden;
 
   width: 60vw;
 
@@ -99,6 +62,7 @@ nav {
 }
 
 .menu-active {
+  visibility: visible;
   transform: translate3d(-60vw,0,0);
 }
 
@@ -129,12 +93,35 @@ nav {
 
 .console {
   box-sizing: border-box;
+  overflow: scroll;
 
   height: calc(0.35 * (100vh - 46px));
   font-family: 'Inconsolata', monospace;
   background-color: #282c34;
   color: #f1f5fd;
   padding: 15px;
+}
+
+.node-info {
+  box-sizing: border-box;
+  overflow: visible;
+  position: absolute;
+  top: 100vh;
+  visibility: hidden;
+
+  /* height: calc(0.35 * (100vh - 46px)); */
+  width: 100vw;
+  font-family: 'Inconsolata', monospace;
+  background-color: #282c34;
+  color: #f1f5fd;
+  padding: 15px;
+
+  transition: 0.3s ease-in-out;
+}
+
+.node-info-active {
+  visibility: visible;
+  transform: translate3d(0, calc(-0.35 * (100vh - 46px)), 0);
 }
 
 textarea {
