--- a/frontend/src/component/Controls/Controls.css
+++ b/frontend/src/component/Controls/Controls.css
@@ -44,8 +44,8 @@
     padding: 2px;
     margin-bottom: 10px;
   
-    width: 33.33%;
-    display: none;
+    /* width: 33.33%; */
+    /* display: none; */
     transition: 0.3s ease-in-out;
   }
   
