show apiresponse progression

--- a/frontend/src/component/Console/Console.css
+++ b/frontend/src/component/Console/Console.css
@@ -1,3 +1,27 @@
 .liveinfo {
-    background-color: red;
+    /* background-color: red; */
+}
+
+
+
+
+
+
+
+
+
+.green {
+    color: green;
+}
+
+.blue {
+    color: blue;
+}
+
+.orange {
+    color: orange;
+}
+
+.yellow {
+    color: yellow;
 }
