--- a/frontend/src/component/Sim/Sim.css
+++ b/frontend/src/component/Sim/Sim.css
@@ -64,8 +64,9 @@
 	box-sizing: border-box;
 	height: var(--node-diameter);
 	width: var(--node-diameter);
-	background: none;
-	border: 2px solid blue;
+	background-color: rgba(24, 205, 250, 0.719);
+	border: 2px solid #282c34;
 	border-radius: 2px;
 	position: absolute;
+	font-weight: bold;
 }
