--- a/frontend/src/component/Sim/Sim.css
+++ b/frontend/src/component/Sim/Sim.css
@@ -14,17 +14,34 @@
 	--y2: 0px;
 }
 
-.sim-wrapper {
+.indicator {
 	box-sizing: border-box;
-  	height: calc(0.65 * (100vh - 46px));
+	border: 2px solid red;
+	position: absolute;
+	height:50px;
+	width:50px;
+}
+
+.sim-wrapper-wrapper {
+	box-sizing: border-box;
+	height: calc(0.65 * (100vh - 46px));
 	background-color: #f1f5fd;
+	text-align: center;
+
+	padding-left: 300px;
+	padding-right: 300px;
+}
+
+.sim-wrapper {
+	
+	box-sizing: border-box;
+	text-align: center;
+	/* width: 468px; */
 
 	padding-top: var(--sim-wrapper-vertical-padding);
 	padding-bottom: var(--sim-wrapper-vertical-padding);
 	padding-left: var(--sim-wrapper-horizontal-padding);
 	padding-right: var(--sim-wrapper-horizontal-padding);
-
-	text-align: center;
 }
 
 .circle-wrapper {
