--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,7 +57,7 @@ nav {
   background-color: #f1f5fd;
   visibility: hidden;
 
-  width: 60vw;
+  width: 100vw;
 
   transition: 0.3s ease-in-out;
 }
@@ -67,12 +67,17 @@ nav {
   transform: translate3d(-60vw,0,0);
 }
 
+.menu-full {
+  visibility: visible;
+  transform: translate3d(-100vw,0,0);
+}
+
 .overlay {
   position: absolute;
   top: 0;
   left:0;
   height: 100vh;
-  width: 500vh;
+  width: 100vw;
   background-color: black;
   visibility: hidden;
   opacity: 0;
@@ -129,7 +134,7 @@ nav {
     float: right;
     width:50%;
     height: calc(100vh - 46px);
-    overflow: scroll;
+    overflow-x: hidden !important;
   }
 
   .node-info {
@@ -142,5 +147,17 @@ nav {
   .node-info-active {
     transform: translate3d(0, calc(-100vh + 46px), 0);
     height: 100vh;
+  }
+
+  header {
+    box-sizing: border-box;
+    height: 46px;
+    border-bottom: 2px solid #282c34 !important;
+  }
+
+  nav {
+    box-sizing: border-box;
+    height: 46px;
+    border-bottom: 2px solid #282c34 !important;
   }
 }
