--- a/frontend/src/component/NavAndMenu/NavAndMenu.css
+++ b/frontend/src/component/NavAndMenu/NavAndMenu.css
@@ -27,7 +27,7 @@ nav {
   position: absolute;
   top: 0;
   left: 100vw;
-  height: 100%;
+  min-height: 100%;
   background-color: #f1f5fd;
   visibility: hidden;
 
@@ -104,5 +104,10 @@ nav {
   font-family: 'Inria Serif', serif;
   color: #282c34;
   text-align: center;
+  animation: fadein 1s;
+}
 
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
