--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,6 +56,12 @@ code {
   height: 75vh;
 }
 
+.node-info-close {
+  height: 30px;
+  width: 30px;
+  position: absolute;
+}
+
 @media only screen and (min-width: 767px) {
   .sim-wrapper {
     display: inline-block;
